--- a/Films/wwwroot/css/MovieDetail.css
+++ b/Films/wwwroot/css/MovieDetail.css
@@ -364,6 +364,28 @@ p{
     }
 
 
+
+
+.list-comments{
+    margin-top: 2rem;
+}
+
+.review-item {
+    background-color: rgba(255, 255, 255, 0.03);
+    border: 1px solid rgba(255, 255, 255, 0.08);
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+}
+
+.user-photo {
+    width: 60px;
+    height: 60px;
+    background-color: rgba(255, 255, 255, 0.1);
+    color: white;
+    font-size: 0.8rem;
+    text-align: center;
+}
+
+
 @media (max-width: 768px) {
     .movie-detail-body {
         flex-direction: column;
