Header, footer y formulario de reviews completo

--- a/Films/Views/Home/Index.cshtml
+++ b/Films/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="~/css/HomeIndex.css?v=@DateTime.Now.Ticks" />
 }
 
-<div class="home-container">
+<div class="home-container mt-4">
     <!--Buscador y filtros-->
     <div id="buscador-container" class="d-flex align-items-stretch gap-2">
         <button class="btn bg-custom-button" data-bs-toggle="modal" data-bs-target="#filterModal">Filtros</button>
