--- a/Films/wwwroot/css/MovieDetail.css
+++ b/Films/wwwroot/css/MovieDetail.css
@@ -407,6 +407,16 @@ p{
         display: block;
     }
 
+.filter-btn.active {
+    border: 2px solid #f4c430;
+    background-color: #f4c430;
+    color: black;
+}
+
+.hidden {
+    display: none !important;
+}
+
 
 
 @media (max-width: 768px) {
