--- a/Films/Views/Authentication/SignUP.cshtml
+++ b/Films/Views/Authentication/SignUP.cshtml
@@ -6,7 +6,7 @@
 
 <div class="auth-container">
     <div class="auth-left">
-        <img src="~/images/moviesImage.png" alt="Movie Image" />
+        <img src="~/images/moviePortada.png" alt="Movie Image" />
     </div>
 
     <div class="auth-right">
@@ -87,5 +87,6 @@
         }
     }
 </script>
+
 
 
