--- a/Films/wwwroot/css/profileDashboard.css
+++ b/Films/wwwroot/css/profileDashboard.css
@@ -58,6 +58,43 @@ body {
     border: 2px solid #F4C430;
 }
 
+.star {
+    font-size: 2rem;
+    color: #ccc;
+    cursor: pointer;
+}
+
+.star.selected {
+    color: gold;
+}
+.comment-item {
+    padding: 15px;
+    background-color: #2c2c2c;
+    border-radius: 8px;
+    margin-bottom: 20px;
+}
+
+.comment-header {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.comment-text {
+    flex-grow: 1;
+}
+
+.stars i {
+    font-size: 18px;
+}
+
+.comment-divider {
+    border: 0;
+    height: 1px;
+    background-color: #F4C430;
+    margin-top: 10px;
+}
+
 
 
 
